--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:creator" content="@kilinoka">
     <meta name="twitter:card" content="summary_large_image">
 
-    <meta property="og:image" content="https://kilinoka.com/asset/img/common/ogp.jpg">
+    <meta property="og:image" content="/asset/img/common/ogp.jpg">
     <meta name="twitter:image" content="https://kilinoka.com/asset/img/common/ogp.jpg">
     <meta property="og:title" content="KILINOKA（キリノカ）">
     <meta name="twitter:title" content="KILINOKA（キリノカ）">
