Fixed email link

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         ・広告掲載のご依頼、ご相談について<br>
         ・お仕事のご依頼、ご相談について<br>
         ・その他のお問い合わせについて</p>
-    <p class="contact-mail"><a class="js-contact-email-link"></a></p>
+    <p class="contact-mail"><p class="js-contact-email-link"></p></p>
   </div>
   <p class="notice">※お問い合わせの内容によっては返答が遅れたり、返答できかねる場合もあります。あらかじめご了承ください。</p>
 </section>
