--- a/about/index.html
+++ b/about/index.html
@@ -137,7 +137,7 @@
     神奈川県立保健福祉大学卒業。<br>
     横浜市西部地域療育センター勤務後、横須賀市療育相談センターの立上げに参画。<br>
     療育現場で障害児の空間認識に興味をもち、vantanデザイン研究所（空間デザインコース）に働きながら通う。<br>
-    その後、freee株式会社を経て、現在株式会社ミニマル・テクノロジーズ勤務。<br>
+    現在、<a href="https://whill.jp/" target="_blank">WHILL株式会社</a>勤務。<br>
     2016年にKILINOKAを発足。<br>
     趣味はピクニック、お神輿。
   </p>
