--- a/interview/saito/index.html
+++ b/interview/saito/index.html
@@ -195,7 +195,7 @@
 「え、産むの？」って思ってるうちに、あれよあれよという間に、産まれちゃいましたね……。
 </p>
 
-<p><img src="img/img02.jpg" alt=""></p>
+<p><img src="img/1002.jpg" alt=""></p>
 
 <p class="interviewer">妊娠７ヶ月での出産だったんですね。</p>
 
