--- a/interview/saito/index.html
+++ b/interview/saito/index.html
@@ -79,7 +79,7 @@
     <span>家族のこと</span>
   </h2>
   <article>
-    <h1 class="article-title">そらが生まれた日は、とってもいい天気」重症心身障害児のお母さん斉藤 美由紀さん。</h1>
+    <h1 class="article-title">「そらが生まれた日は、とってもいい天気」重症心身障害児のお母さん斉藤 美由紀さん。</h1>
     <p class="article-date">2018/04/12</p>
     <div class="article-sns">
   <ul>
@@ -114,7 +114,7 @@
           <dt>名前</dt>
           <dd>斉藤美由紀</dd>
           <dt>年齢</dt>
-          <dd>30歳代後半</dd>
+          <dd>30代後半</dd>
           <dt>家族構成</dt>
           <dd>自分・夫・長男（そら）</dd>
           <dt>育児協力者</dt>
@@ -218,7 +218,7 @@
 
 <p class="interviewer">出産した時、どういうお気持ちでしたか？</p>
 
-<p><span class="person-name">斎藤</span>無事生まれて良かった」っていう感じだったかな。
+<p><span class="person-name">斎藤</span>「無事生まれて良かった」っていう感じだったかな。
 その頃は障害とか考えてなくて。成長は遅いだろうけど、普通に育つかなと思ってました。
 </p>
 <p>首が座らないなんてことは……想像しなかったです。歩けるようにはならないかなとは思ってたけど。</p>
@@ -293,7 +293,7 @@
 </p>
 
 <h2 id="子どもの頃は男勝りな女の子">自分ひとりの時間をもつことで、子どもがもっと愛おしくなる </h2>
-<p class="interviewer">普段の医療ケアや工夫していることについて教えてください。
+<p class="interviewer">普段の医療的ケアや工夫していることについて教えてください。
 </p>
 <p><span class="person-name">斎藤</span>
 気管切開、酸素、吸引。痙攣（けいれん）はないです。胃ろうの手術を2歳でしてます
@@ -329,7 +329,7 @@
   夜中はほとんどやることがなくって寝てるので。一応一通りのことはできるんですけど、自分から進んでやるということは無いですね。
 </p>
 
-<p class="interviewer">フレッシュ方法を教えてください。
+<p class="interviewer">リフレッシュ方法を教えてください。
 </p>
 <p><span class="person-name">斎藤</span>
 買い物とか食べ物、カフェ、雑貨屋さん巡りですね。
@@ -345,16 +345,12 @@
 </p>
 
 <p><img src="img/1009.jpg" alt=""></p>
-<p>パパも出かけるのは好きなので。お酒が好きで、運転はしないんですけど。
-</p>
 
 <p class="interviewer">今後、働きたいですか。
 </p>
 <p><span class="person-name">斎藤</span>
 働きたいです。
 フルタイムで働きたいとは思わないですけど、自分の自由に使えるお金が欲しいです。
-</p>
-<p>パパも出かけるのは好きなので。お酒が好きで、運転はしないんですけど。
 </p>
 
 <p class="interviewer">病気のこともあると思いますが、きょうだいを欲しいと思いますか？
