--- a/interview/nonokokomama/index.html
+++ b/interview/nonokokomama/index.html
@@ -191,7 +191,7 @@
 </p>
 
 <p><span class="person-name">ののここママ</span>
-  <p>ののここママ   出会ったのは、私が17歳のときで、旦那は15歳のときです。
+出会ったのは、私が17歳のときで、旦那は15歳のときです。
   私、モスバーガーでアルバイトをしてたんですよ。パートの方が今の義理のお母さん（以下Aさん）になる方で、息子がいるのを知らない状態で、いっしょに働いてたんです。</p>
 
   <p>中学校を卒業して高校入学するまでって、ちょっと休みというか、空きますよね。そのときに、「アルバイトしたい」と言ったらしくて、特別にオーナーにお願いして入ってきたのが、旦那でした。そこがはじめての出会いでした。</p>
