--- a/interview/nonokokomama/index.html
+++ b/interview/nonokokomama/index.html
@@ -85,7 +85,7 @@
   </h2>
   <article>
     <h1 class="article-title">「ありがとうって言葉がすごく嬉しくて、私の活力です」急性脳症の娘さんのお母さん・ののここママさん</h1>
-    <p class="article-date">2018/05/22</p>
+    <p class="article-date">2018/05/23</p>
     <div class="article-sns">
   <ul>
     <li class="article-sns__twitter">
@@ -231,7 +231,7 @@
 結婚して11年経つんですけど、最初のうちはすごくけんかも多くて、離婚しようかなと何度も考えたくらいだし、まぁでも私が慣れちゃったのかな……。
 
 
-  <p>スタートが最悪で、よく結婚したねって言われるくらいひどい人だったので。結婚してから、私もえーって思いました。結婚するまでも、ちらほら見え隠れしてたんですけど、そんなにひどい人とは思わなくて</p>
+  <p>スタートが最悪で、よく結婚したねって言われるくらいひどい人だったので。結婚してから、私もえーって思いました。結婚するまでも、ちらほら見え隠れしてたんですけど、そんなにひどい人とは思わなくて。</p>
 
   <p>今はなるべく私も、大人になって「ありがとう」を言うようにしたり、向こうも少しずつ、ウニのトゲがタワシのトゲくらいになってきて、年々仲良くなってる感じですかね。
 </p>
@@ -281,7 +281,7 @@
 
 <p><img src="img/img07.jpg" alt=""></p>
 
-<p>>母にみてもらって、入院の準備で戻ってたときだったんですよ。そのあいだに発作を起こして、私が病院に戻ったころは痙攣はなく、ただ、一晩呼吸状態がおかしくて。</p>
+<p>母にみてもらって、入院の準備で戻ってたときだったんですよ。そのあいだに発作を起こして、私が病院に戻ったころは痙攣はなく、ただ、一晩呼吸状態がおかしくて。</p>
 
 <p>1回吸ったら、20秒止まって、みたいなのを何時間も繰り返して、何度も先生を呼んだりして。そこから挿管して、ICUみたいなところのフロアに行って。</p>
 
@@ -823,8 +823,8 @@
   ひとりで泣く時間は大事だけど、ひとりで抱え込む事はしないほうがいいと思うので、家族はもちろん、家族以外にも支え合える方がいたらいいのかなと思います。
   <p>私の場合は、娘の療育施設やリハビリ施設、支援学校などで出会えたママさん達です。とても支えていただいています。逆にありがとうと言ってもらえたり……。その言葉がまた私の活力にもなっていると思います。</p>
 
-<p><img src="img/img01.jpg" alt=""></p>
-  
+<p><img src="img/img13.jpg" alt=""></p>
+
 </p>
 
 
