change name, profile and iamge

--- a/about/index.html
+++ b/about/index.html
@@ -128,18 +128,15 @@
 <section class="about-profile">
   <p class="about-profile-icon"><img src="/asset/img/about/about-profile-icon.png" alt=""></p>
   <p class="about-profile-founder">KILINOKA代表</p>
-  <p class="about-profile-name">服部祐介</p>
+  <p class="about-profile-name">はっと</p>
   <ul class="about-profile-sns">
     <li><a href="https://www.facebook.com/yusukehatto/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
   </ul>
   <p class="about-profile-text">
-    1984年神奈川県平塚市生まれ。1児の父。<br>
-    神奈川県立保健福祉大学卒業。<br>
-    横浜市西部地域療育センター勤務後、横須賀市療育相談センターの立上げに参画。<br>
-    療育現場で障害児の空間認識に興味をもち、vantanデザイン研究所（空間デザインコース）に働きながら通う。<br>
-    現在、<a href="https://whill.jp/" target="_blank">WHILL株式会社</a>勤務。<br>
-    2016年にKILINOKAを発足。<br>
-    趣味はピクニック、お神輿。
+    1984年神奈川県生まれ。<br>
+    大学卒業後、療育相談センターの立上げに参画。<br>
+    障害児の空間認識に興味をもち、デザイン学校に通う。 <br>
+    その後スタートアップ勤務。KILINOKAを自主運営。
   </p>
 </section>
 
